Fix for #9195: Adjusts the table container size to prevent scrollbar

--- a/less/variables.less
+++ b/less/variables.less
@@ -582,7 +582,7 @@
 // --------------------------------------------------
 
 // Small screen / tablet
-@container-tablet:          728px;
+@container-tablet:          724px;
 
 // Medium screen / desktop
 @container-desktop:         940px;
